--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: 0 10 * * *
+    - cron: 0 2 * * *
 
 jobs:
   build:
@@ -25,7 +25,7 @@ jobs:
         sckey='${{ secrets.SCKEY }}'
         user='${{ secrets.USER }}'
         pwd='${{ secrets.PWD }}'
-        step='${{ secrets.STEP }}'
+        step='${{ [6000-8000] }}'
         
         python3 main.py <<EOF
         ${sckey}
